--- a/protocolo/main.tex
+++ b/protocolo/main.tex
@@ -5,7 +5,7 @@
 \usepackage[numbers]{natbib}
 \usepackage{xspace}
 \usepackage{url}
-\usepackage[colorlinks,urlcolor=blue,citecolor=black,linkcolor=black]{hyperref}
+\usepackage[colorlinks,urlcolor=black,citecolor=black,linkcolor=black]{hyperref}
 
 \setdefaultlanguage{spanish}
 
