--- a/protocolo/referencias.bib
+++ b/protocolo/referencias.bib
@@ -14,6 +14,7 @@ note = {Online; accessed April 18, 2021},
 year = {2021}
 }
 
+
 @misc{nodemcu_deep_sleep,
 author = "{NodeMCU}",
 title = {{NodeMCU Firmware Documentation}},
@@ -82,6 +83,57 @@ note = {Online; accessed April 18, 2021},
 year = {2021}
 }
 
+@misc{hologram_nova,
+author = "{Hologram}",
+title = {{HOLOGRAM NOVA}},
+howpublished = {\url{https://www.hologram.io/products/nova#}},
+note = {Online; accessed April 20, 2021},
+year = {2021}
+}
+
+@misc{pm2_landing,
+author = "{PM2}",
+title = {{PM2 Documentation}},
+howpublished = {\url{https://pm2.keymetrics.io/docs/usage/pm2-doc-single-page/}},
+note = {Online; accessed April 20, 2021},
+year = {2021}
+}
+
+@misc{nginx,
+author = "{NGINX}",
+title = {{What is NGINX?}},
+howpublished = {\url{https://www.nginx.com/resources/glossary/nginx/}},
+note = {Online; accessed April 20, 2021},
+year = {2021}
+}
+@misc{vuejs,
+author = "{Vue.js}",
+title = {{What is Vue.js?}},
+howpublished = {\url{https://vuejs.org/v2/guide/#What-is-Vue-js}},
+note = {Online; accessed April 20, 2021},
+year = {2021}
+}
+
+@article{jwt,
+abstract = {JSON Web Token (JWT) is a compact URL-safe means of representing claims to be transferred
+between two parties. The claims in a JWT are encoded as a JavaScript Object Notation (JSON)
+object that is used as the payload of a JSON Web Signature (JWS) structure or as the plaintext
+of a JSON Web Encryption (JWE) structure, enabling the claims to be digitally signed or MACed
+and/or encrypted.
+The suggested pronunciation of JWT is the same as the English word "jot".},
+author = {Jones, M. and Bradley, J.},
+journal = {Internet draft},
+title = {{JSON Web Token (JWT)}},
+year = {2013}
+}
+
+@misc{fastapi,
+  title        = {FastAPI},
+  author       = {Ramírez, Sebastián},
+  howpublished = {\url{https://fastapi.tiangolo.com/}},
+  year         = {2020},
+  month        = {Dec}
+}
 
 
 
