--- a/protocolo/capitulos/alcance.tex
+++ b/protocolo/capitulos/alcance.tex
@@ -4,12 +4,8 @@
 \begin{itemize}
     \item El sistema solo monitoreará 4 variables dentro de un invernadero: temperatura ambiental, humedad del suelo, humedad ambiental e intensidad de la luz.
     \item Se controlará el riego del mismo utilizando una válvula de solenoide y el clima a través de abanicos y aspersores de niebla utilizando técnicas de lógica difusa. 
-    \item La interfaz web no será multi-usuario.
-    \item Solamente va a operar en el invernadero del rancho el sufrido
-    \item Estos datos podrán ser monitoreados y controlados en tiempo real solamente a través de una interfaz web.
-    \item En la interfaz, se podrán consultar datos históricos sobre las mediciones.
-    \item Juntar los ultimos 3 puntos
-    \item Narrarlo desde la perspectiva de los datos historicos: los datos historicos sobre las maediciones se podran consultar a traves de la interfaz web
+    \item Los datos históricos sobre las mediciones solo podrán ser consultados a través de la interfaz web y esta no será multi usuario.
+    \item Se desarrollará un sistema que resuelva las necesidades del rancho El sufrido.
 \end{itemize}
 
 \subsection*{Limitaciones}
